--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "react-router-dom": "^7.13.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
