--- a/community-board/package.json
+++ b/community-board/package.json
@@ -2,12 +2,15 @@
     "name": "community-board",
     "private": true,
     "version": "0.0.0",
+    "homepage": "https://Ladayport.github.io/bulletin_board_googleSheet",
     "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "date-fns": "^2.30.0",
@@ -24,6 +27,7 @@
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.4",
+        "gh-pages": "^6.3.0",
         "vite": "^5.0.0"
     }
 }
